<resources>
    <string name="app_name">TestCase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- BOTTOM MENU -->
    <string name="home">Home</string>
    <string name="basket">Basket</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>

    <!-- PRODUCT MAIN FRAGMENT -->
    <string name="search">Search</string>
    <string name="filters">Filters:</string>
    <string name="select_filter">Select Filter</string>
    <string name="added_to_db">Added to Database:</string>
    <string name="error">Something went wrong. Please try again</string>

    <!-- PRODUCT ITEM LAYOUT -->
    <string name="add_to_basket">ADD TO BASKET</string>

    <!-- PRODUCT DETAIL FRAGMENT -->
    <string name="price">Price:</string>

    <!-- BOTTOM SHEET FRAGMENT -->
    <string name="mercedes">Mercedes</string>
    <string name="ford">Ford</string>

    <!-- BASKET FRAGMENT -->
    <string name="total">Total:</string>

    <!-- DB ITEM LAYOUT -->
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="count">1</string>
    <string name="brand_name">Brand Name</string>
    <string name="price_db">Price</string>


</resources>