<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_20">

            <TextView
                android:id="@+id/brand_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/brand_name"
                android:textSize="@dimen/textSize22"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5"
                android:text="@string/price_db"
                android:textSize="@dimen/textSize16"
                android:textColor="@color/topbar_background_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/brand_name" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/brand_name">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="@dimen/dimen_40"
                    android:layout_height="@dimen/dimen_40"
                    android:text="@string/plus"
                    app:layout_constraintBottom_toBottomOf="@+id/price"
                    app:layout_constraintTop_toTopOf="@+id/brand_name"
                    tools:layout_editor_absoluteX="152dp" />

                <TextView
                    android:id="@+id/db_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textSize20"
                    android:text="@string/count" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="@dimen/dimen_40"
                    android:layout_height="@dimen/dimen_40"
                    android:text="@string/minus"
                    app:layout_constraintBottom_toBottomOf="@+id/price"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/brand_name" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>