<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.productMainFragment.ProductMainFragment">


        <LinearLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_60"
            android:orientation="horizontal"
            android:background="@color/topbar_background_color"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/dimen_18"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dimen_16" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/dimen_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topBar">
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="@dimen/dimen_50"
                android:layout_height="@dimen/dimen_50"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:background="#E8E8E8"
                android:drawableStart="@drawable/search"
                android:drawablePadding="@dimen/dimen_8"
                android:gravity="start|center_vertical"
                android:hint="@string/search"
                android:inputType="text"
                android:paddingStart="@dimen/dimen_20"
                android:paddingEnd="@dimen/dimen_20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/filters"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize26"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/searchEditText"
                app:layout_constraintTop_toBottomOf="@+id/searchEditText" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/select_filter"
                app:layout_constraintEnd_toEndOf="@+id/searchEditText"
                app:layout_constraintTop_toBottomOf="@+id/searchEditText" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/product_rcv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/filter" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>